# route-distances

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  README.md  conda-env.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python.html  route_distances.html  route_distances.lstm.html  route_distances.ted.html  route_distances.tools.html  search.html  searchindex.js  tasks.py
.github/workflows/: docs.yml  publish_to_pypi.yml  tests.yml
_sources/: modules.rst.txt  route_distances.lstm.rst.txt  route_distances.rst.txt  route_distances.ted.rst.txt  route_distances.tools.rst.txt
docs/: conf.py  index.rst  python.rst
route_distances/: clustering.py  route_distances.py  validation.py
route_distances/lstm/: data.py  defaults.py  features.py  inference.py  models.py  optim.py  utils.py
route_distances/ted/: distances.py  reactiontree.py  utils.py
route_distances/tools/: cluster_aizynth_output.py  prepare_aizynthfinder_output.py  train_lstm_model.py
route_distances/utils/: routes.py  type_utils.py
tests/: conftest.py  test_cli.py  test_clustering.py  test_lstm_data.py  test_lstm_features.py  test_lstm_models.py  test_lstm_utils.py  test_route_utils.py  test_ted.py  test_validation.py
tests/data/: dummy_model.ckpt  finder_output_example.hdf5  longer_routes.json  test_data.pickle
