[tool.poetry]
name = "route-distances"
version = "1.2.2"
description = "Models for calculating distances between synthesis routes"
authors = ["Genheden, Samuel <samuel.genheden@astrazeneca.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MolecularAI/route-distances/"
repository = "https://github.com/MolecularAI/route-distances/"
documentation = "https://molecularai.github.io/route-distances/"

[tool.poetry.scripts]
train_lstm_model = "route_distances.tools.train_lstm_model:main"
prepare_aizynthfinder_output = "route_distances.tools.prepare_aizynthfinder_output:main"
cluster_aizynth_output = "route_distances.tools.cluster_aizynth_output:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^1.7.1"
pytorch-tree-lstm = "^0.1.3"
pytorch-lightning = "^1.6.0, <1.8.4"
optuna = "^2.5.0"
tables = "^3.6.0"
apted = "^1.0.3"
scikit-learn = ">0.21.0"
pydantic = "^2.8.2"
python-dateutil = "^2.8.2"
rdkit = "^2023.9.1"
pandas = "^1.5.0"
numpy = "^1.0.0"
numexpr = "<=2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^22.0"
pytest-datadir = "^1.5.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
pylint = "^3.3.1"
invoke = "^2.2.0"
sphinx = "<8.1.0"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
max-args = 6
max-attributes = 15
min-public-methods = 0
disable = "W1201, W1203, R0401, W0707, W0221, W0603, R0801, typecheck"

[build-system]
requires = ["setuptools==59.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
